--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,5 +1,5 @@
 .cover__link {
-    background-image: url(../../../images/__background.svg);
+    background-image: url(../../../images/__background.jpg);
     max-width: 100%;
     padding-top: 62%;
     background-position: center;
