--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -40,13 +40,12 @@
 
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
 
     .place__title {
         max-width: 288px;
         font-style: normal;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 0 0 8%;
         font-weight: 900;
         font-size: 32px;
         line-height: 35px;
