--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,7 @@
 .place__paragraph {
     margin: 0 0 26px 0;
     font-style: normal;
+    max-width: 484px;
     font-weight: 400;
     font-size: 18px;
     line-height: 29px;
@@ -12,7 +13,7 @@
 
 @media screen and (max-width:320px) {
 
-    .place__website {
+    .place__paragraph {
         margin: 0;
     }
 
