--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,29 +1,25 @@
 .cover__link {
-    background-image: url(../../../images/__background.jpg);
-    max-width: 100%;
-    padding-top: 62%;
-    background-position: center;
-    text-decoration: none;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
+  display: block;
+  min-height: 740px;
+  grid-row: 1/3;
+  grid-column: 1;
+  z-index: 2;
 }
 
-.cover__link::before {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #2A2C2F;
-    opacity: .3;
-    transition: .335s ease-in-out;
+@media screen and (max-width: 1280px) {
+  .cover__link {
+    min-height: 58vw;
   }
-  .cover__link:hover::before  {
-    opacity: .8;
+}
+
+@media screen and (max-width: 1100px) {
+  .cover__link {
+    min-height: 63vw;
   }
+}
+
+@media screen and (max-width: 500px) {
+  .cover__link {
+    min-height: 62.5vw;
+  }
+}
