--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,22 +1,28 @@
 .cover__subtitle {
-    font-style: normal;
-    font-weight: 400;
+    margin: 0;
+    max-width: 360px;
     font-size: 18px;
     line-height: 22px;
+    font-weight: 400;
     text-align: center;
-    margin: 32px 0 0;
-    color: #fff;
+    grid-row: 2;
+    grid-column: 1;
+    z-index: 1;
+    justify-self: center;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 768px) {
     .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
+        max-width: 80%;
+        font-size: 18px;
+        line-height: 22px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 620px) {
     .cover__subtitle {
-        margin: 18px 0 0;
+        max-width: 81%;
+        font-size: 14px;
+        line-height: 16px;
     }
 }
