--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,23 +1,21 @@
 .cover__title {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 72px;
     margin: 0;
+    max-width: 560px;
+    font-size: 72px;
     line-height: 76px;
-    color: #fff;
+    font-weight: 900;
     text-align: center;
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    justify-self: center;
+    align-self: end;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 620px) {
     .cover__title {
-        width: 250px;
+        max-width: 80%;
         font-size: 32px;
-        line-height: 36px;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .cover__title {
-        max-width: 288px;
+        line-height: 35px;
     }
 }
