--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,30 @@
 .cover {
-        max-width: 1184px;
-        margin: 0 auto;
-    }
+    max-width: 1184px;
+    margin: 0 auto;
+    position: relative;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 32px;
+}
 
-    @media screen and (max-width: 1184px) {
-        .cover  {
-            max-width: 100%;
-        }
+.cover:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #2A2C2F;
+    opacity: .3;
+    transition: .3s linear;
+}
+
+.cover:hover::before {
+    opacity: .8;
+}
+
+@media screen and (max-width: 500px) {
+    .cover {
+        grid-gap: 16px;
     }
+}
