--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -28,3 +28,10 @@
         grid-gap: 16px;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .cover {
+        grid-gap: 16px;
+        margin: 0 0 64px;
+    }
+}
