--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -10,14 +10,15 @@
 }
 
 .footer__link:last-child {
-    margin: 0;
+    margin-right: 0;
 }
 
 .footer__link:hover {
     opacity: .5;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
+    
     .footer__link {
         flex-direction: column;
         margin: 0 0 32px;
