--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,9 +18,11 @@
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
     .footer {
         max-width: calc(100vw - 48px);
         flex-direction: column;
+        margin: 0;
+        padding: 64px 16px 24px;
     }
 }
