--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,7 @@
     max-width: 1184px;
     margin: 28px auto 56px;
     justify-content: space-between;
+    align-items: center;
 }
 
 @media screen and (max-width: 1280px) {
@@ -27,5 +28,6 @@
 @media screen and (max-width: 320px) {
     .header {
         max-width: 90%;
+        margin-top: 16px;
     }
 }
