--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,20 +1,11 @@
 .place__image {
-    max-width: 100%;
-    display: grid;
+    width: 100%;
     grid-row-start: 2;
-    grid-row-end: 4;
-    margin: 0;
+    grid-row-end: 6;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 760px) {
     .place__image {
-        margin: 0 auto;
-    }
-}
-
-@media screen and (max-width: 499px) {
-    .place__image {
-
         grid-row: auto;
     }
 }
