--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,9 @@
 .place__paragraph {
-    margin: 0 0 26px 0;
-    font-style: normal;
-    max-width: 484px;
+    grid-column: 2;
     font-weight: 400;
     font-size: 18px;
-    line-height: 29px;
+    line-height: 29.34px;
+    margin: 0 0 25px 0;
 }
 
 .place__paragraph:last-child {
@@ -14,21 +13,22 @@
 @media screen and (max-width: 768px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 26px;
+        line-height: 26.08px;
     }
 }
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 760px) {
     .place__paragraph {
-        margin: 0 auto;
+        grid-column: 1;
+        margin-left: 24px;
+        margin-top: 32px;
+        margin-right: 24px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        margin: 32px auto 25px;
         max-width: 90%;
     }
-}
-
-@media screen and (max-width:320px) {
-
-    .place__paragraph {
-        margin: 0;
-    }
-
 }
