--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -25,11 +25,11 @@
 
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 760px) {
 
     .place__title {
-        max-width: 288px;
-        margin: 0 24px 0 32px;
+        margin-left: 24px;
+        margin-bottom: 32px;
         font-size: 32px;
         line-height: 35px;
     }
@@ -39,7 +39,7 @@
 @media screen and (max-width: 500px) {
 
     .place__title {
-        margin: 0 0 0 8%;
+        margin: 0 0 32px 8%;
     }
 
 }
