--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,11 +4,16 @@
     align-self: end;
 }
 
+@media screen and (max-width: 767px) {
+    .place__website {
+        margin-left: 24px;
+    }
+}
 
 @media screen and (max-width:500px) {
 
     .place__website {
-        margin: 0 0 0 8%;
+        margin: 0 0 48px 8%;
     }
 
 }
