--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,32 +1,26 @@
 .place {
     display: grid;
-    grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
-    column-gap: 48px;
+    grid-template-columns: 460px 1fr;
+    grid-column-gap: 40px;
 }
 
-@media screen and (max-width: 1024px) {
-
+@media screen and (max-width: 1100px) {
     .place {
-        grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
+        grid-template-columns: 440px 1fr;
+        grid-column-gap: 32px;
     }
-
 }
-
 
 @media screen and (max-width: 768px) {
-
     .place {
-        grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-        gap: 48px 28px;
+        grid-template-columns: 340px 1fr;
+        grid-column-gap: 28px;
     }
-
 }
 
-@media screen and (max-width: 499px) {
-
+@media screen and (max-width: 760px) {
     .place {
-        grid-template-columns: repeat(auto-fit, minmax(200px, 499px));
-        gap: 32px;
+        grid-template-columns: 1fr;
+        gap: 50px;
     }
-
 }
