--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 1100px) {
   .places {
     max-width: 90.625%;
+    gap: 73px;
   }
 }
 
@@ -23,7 +24,7 @@
   }
 }
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 760px) {
   .places {
     max-width: 100%;
   }
