--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,28 +1,27 @@
 .cover__subtitle {
-    margin: 0;
-    max-width: 360px;
-    font-size: 18px;
-    line-height: 22px;
-    font-weight: 400;
     text-align: center;
-    grid-row: 2;
-    grid-column: 1;
-    z-index: 1;
-    justify-self: center;
-}
-
-@media screen and (max-width: 768px) {
+    line-height: 22px;
+    max-width: 360px;
+    font-weight: 400;
+    color: #ffffff;
+    font-size: 18px;
+    padding: 0;
+    margin: 0;
+  }
+  
+  @media screen and (max-width: 400px) {
     .cover__subtitle {
-        max-width: 80%;
-        font-size: 18px;
-        line-height: 22px;
+      line-height: 16px;
+      max-width: 300px;
+      font-size: 14px;
     }
-}
-
-@media screen and (max-width: 620px) {
+  }
+  
+  @media screen and (max-width: 320px) {
     .cover__subtitle {
-        max-width: 81%;
-        font-size: 14px;
-        line-height: 16px;
+      max-width: 288px;
+      line-height: 1.14;
+      font-size: 14px;
+      margin: 0 16px 33px;
     }
-}
+  }
