--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,21 +1,37 @@
 .cover__title {
-    margin: 0;
-    max-width: 560px;
-    font-size: 72px;
-    line-height: 76px;
-    font-weight: 900;
+    text-decoration: none;
     text-align: center;
-    grid-column: 1;
-    grid-row: 1;
-    z-index: 1;
-    justify-self: center;
-    align-self: end;
-}
-
-@media screen and (max-width: 620px) {
+    line-height: 76px;
+    color: #ffffff;
+    max-width: 560px;
+    font-weight: 900;
+    font-size: 72px;
+    padding: 0;
+    margin: 0;
+  }
+  
+  @media screen and (max-width: 700px) {
     .cover__title {
-        max-width: 80%;
-        font-size: 32px;
-        line-height: 35px;
+      margin-bottom: 16px;
+      line-height: 65px;
+      max-width: 460px;
+      font-size: 62px;
     }
-}
+  }
+  
+  @media screen and (max-width: 450px) {
+    .cover__title {
+      line-height: 45px;
+      max-width: 338px;
+      font-size: 42px;
+    }
+  }
+  
+  @media screen and (max-width: 320px) {
+    .cover__title {
+      margin: 33px 16px 16px;
+      line-height: 35px;
+      max-width: 250px;
+      font-size: 32px;
+    }
+  }
