--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -10,25 +10,20 @@
     margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) {
-    .place__paragraph {
-        font-size: 16px;
-        line-height: 26.08px;
-    }
-}
-
 @media screen and (max-width: 760px) {
     .place__paragraph {
         grid-column: 1;
         margin-left: 24px;
         margin-top: 32px;
         margin-right: 24px;
+        font-size: 16px;
+        line-height: 26.08px;
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 500px) {
     .place__paragraph {
-        margin: 32px auto 25px;
+        margin: 0 auto 25px;
         max-width: 90%;
     }
 }
