--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -39,7 +39,8 @@
 @media screen and (max-width: 500px) {
 
     .place__title {
-        margin: 0 0 32px 8%;
+        margin: 0 0 32px 0;
+        padding: 0 5vw;
     }
 
 }
