--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -13,7 +13,8 @@
 @media screen and (max-width:500px) {
 
     .place__website {
-        margin: 0 0 48px 8%;
+        margin: 0 0 32px 0;
+        padding: 0 5vw;
     }
 
 }
