--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -18,14 +18,14 @@
   }
 }
 
-@media screen and (max-width: 769px) {
-  .places {
-    max-width: 93.75%;
-  }
-}
-
 @media screen and (max-width: 760px) {
   .places {
     max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .places {
+    margin-bottom: 66px;
   }
 }
