--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,7 +7,7 @@
     font-weight: 900;
     font-size: 72px;
     padding: 0;
-    margin: 0;
+    margin-bottom: 32px;
   }
   
   @media screen and (max-width: 700px) {
