--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,14 @@
     }
 }
 
+@media screen and (max-width: 900px) {
+    .footer {
+        max-width: calc(100vw - 48px);
+        margin: 0;
+        padding: 88px 24px 24px;
+    }
+}
+
 @media screen and (max-width: 760px) {
     .footer {
         max-width: calc(100vw - 48px);
