--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -11,16 +11,23 @@
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1124px) {
   .places {
     max-width: 90.625%;
     gap: 73px;
   }
 }
 
+@media screen and (max-width: 1024px) {
+  .places {
+    grid-row-gap: 80px;
+  }
+}
+
 @media screen and (max-width: 900px) {
   .places {
     max-width: 93.75%;
+    grid-row-gap: 87px;
   }
 }
 
