--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -16,6 +16,16 @@
 
 }
 
+@media screen and (max-width: 900px) {
+
+    .place__title {
+        font-size: 42px;
+        max-width: 330px;
+        line-height: 46px;
+    }
+
+}
+
 @media screen and (max-width: 760px) {
 
     .place__title {
